# pyramid-sync-data

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.py  logger.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_06_27_1340-cb1fc9087081_init.py  2024_07_10_1449-28be1ef4e83c_change_data_created_at_tz_set_to_true.py  2024_08_06_1629-a803ba2483fe_disable_tz_info_on_data_model.py  2024_08_28_1610-dac27c5bc59d_add_electro.py  2024_08_28_1716-b22dcba0e918_add_water.py  2024_08_28_1727-fde66d668aa4_add_warm.py  2025_10_28_0036-2dfd51025234_add_ondelete_cascade_to_data_if_remove_.py
app/: app.py
app/api/: __init__.py  dependencies.py
app/api/data/: open_api_examples.py  router.py
app/celery/: celery_app.py  helpers.py  pyramid_api.py  shared_types.py  types.py
app/db/: __init__.py  base_model.py  db.py
app/db/mixins/: external_id_mixin.py
app/db/models/: building.py  data.py  device.py  electro.py  tag.py  warm.py  water.py
app/repositories/: __init__.py  abstract_repository.py  building_repository.py  data_repository.py  device_repository.py  electro_repository.py  tag_repository.py  warm_repository.py  water_repository.py
app/schemas/: base_schema.py  building_schema.py  data_schema.py  device_schema.py  tag_schema.py
app/services/: building_service.py  data_service.py  device_service.py  helper.py  load_data_service.py  tag_service.py
app/utils/: unit_of_work.py
data_tables/: electro-new.xlsx  electro.xlsx  electro_30_04_25.xlsx  warm-new.xlsx  warm.xlsx  warm_30_04_25.xlsx  water.xlsx  water_30_04_25.xlsx
(+5 files in other folders)
